--- a/src/utils/get_data.ipynb
+++ b/src/utils/get_data.ipynb
@@ -38,9 +38,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "w3 = Web3(HTTPProvider(''))\n",
-    "my_address = \"\"\n",
-    "private_key = \"\"\n",
+    "w3 = Web3(HTTPProvider(os.environ.get(\"PROVIDER_URI_SEPOLIA\")))\n",
+    "my_address = os.environ.get(\"ADDRESS\")\n",
+    "private_key = os.environ.get(\"PRIVATE_KEY\")\n",
     "address = Web3.to_checksum_address(my_address)"
    ]
   },
