--- a/src/utils/run.ipynb
+++ b/src/utils/run.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +19,7 @@
     "from hexbytes import HexBytes\n",
     "import json\n",
     "import time\n",
+    "from web3.gas_strategies.time_based import medium_gas_price_strategy\n",
     "import os\n",
     "from threading import Thread\n",
     "from web3.datastructures import AttributeDict"
@@ -30,9 +31,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "w3 = Web3(HTTPProvider(''))\n",
-    "my_address = \"\"\n",
-    "private_key = \"\"\n",
+    "w3 = Web3(HTTPProvider(os.environ.get(\"PROVIDER_URI_SEPOLIA\")))\n",
+    "my_address = os.environ.get(\"ADDRESS\")\n",
+    "private_key = os.environ.get(\"PRIVATE_KEY\")\n",
     "address = Web3.to_checksum_address(my_address)"
    ]
   },
@@ -90,6 +91,7 @@
    ],
    "source": [
     "request_event_filter = coordinator_contract.events.RequestEvent.create_filter(fromBlock='latest')\n",
+    "w3.eth.set_gas_price_strategy(medium_gas_price_strategy)\n",
     "\n",
     "# You can use your model here\n",
     "def my_model(input, modelId = 1234):\n",
@@ -117,7 +119,7 @@
     "    print(f\"\\nOutput: {output}\")\n",
     "\n",
     "    # Send the output back to the coordinator to fulfill the request\n",
-    "    tx_hash = coordinator_contract.functions.fulfillRequest(requestId, output).build_transaction({'from': address,\"nonce\": w3.eth.get_transaction_count(address), \"gas\": 1000000, \"gasPrice\": w3.eth.gas_price, \"chainId\": w3.eth.chain_id, \"value\": 0})\n",
+    "    tx_hash = coordinator_contract.functions.fulfillRequest(requestId, output).build_transaction({'from': address,\"nonce\": w3.eth.get_transaction_count(address), \"gas\": 2000000, \"gasPrice\": w3.eth.generate_gas_price(), \"value\": 0})\n",
     "    signed_tx = w3.eth.account.sign_transaction(tx_hash, private_key=private_key)\n",
     "    tx_hash = w3.eth.send_raw_transaction(signed_tx.rawTransaction)\n",
     "    print(f\"Transaction hash: {tx_hash.hex()}\")\n",
