--- a/src/utils/user.ipynb
+++ b/src/utils/user.ipynb
@@ -18,7 +18,8 @@
    "outputs": [],
    "source": [
     "from web3 import Web3, HTTPProvider\n",
-    "import json"
+    "import json\n",
+    "import os"
    ]
   },
   {
@@ -27,9 +28,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "w3 = Web3(HTTPProvider(''))\n",
-    "my_address = \"\"\n",
-    "private_key = \"\"\n",
+    "w3 = Web3(HTTPProvider(os.environ.get(\"PROVIDER_URI_SEPOLIA\")))\n",
+    "my_address = os.environ.get(\"ADDRESS\")\n",
+    "private_key = os.environ.get(\"PRIVATE_KEY\")\n",
     "address = Web3.to_checksum_address(my_address)"
    ]
   },
@@ -54,8 +55,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You should set the gasPrice wisely\n",
-    "tx_hash = coordinator_contract.functions.makeRequest(\"1234\", \"TestInput1234\", collector_contract_address, \"setOutput(uint256,string)\").build_transaction({'from': address,\"nonce\": w3.eth.get_transaction_count(address),\"value\": 0,\"gas\": 100000,\"gasPrice\": w3.to_wei('1', 'gwei')})\n",
+    "from web3.gas_strategies.time_based import medium_gas_price_strategy\n",
+    "\n",
+    "# Transaction mined within 5 minutes.\n",
+    "w3.eth.set_gas_price_strategy(medium_gas_price_strategy)\n",
+    "tx_hash = coordinator_contract.functions.makeRequest(\"1234\", \"TestInput1234\", collector_contract_address, \"setOutput(uint256,string)\").build_transaction({'from': address,\"nonce\": w3.eth.get_transaction_count(address),\"value\": 0,\"gas\": 2000000,\"gasPrice\": w3.eth.generate_gas_price()})\n",
     "signed_tx = w3.eth.account.sign_transaction(tx_hash, private_key=private_key)\n",
     "tx_hash = w3.eth.send_raw_transaction(signed_tx.rawTransaction)\n",
     "receipt = w3.eth.wait_for_transaction_receipt(tx_hash)"
