--- a/src/utils/utils.ipynb
+++ b/src/utils/utils.ipynb
@@ -9,12 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from web3 import Web3, HTTPProvider\n",
-    "import json"
+    "import json\n",
+    "from web3.gas_strategies.time_based import medium_gas_price_strategy\n",
+    "import os"
    ]
   },
   {
@@ -30,9 +32,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "w3 = Web3(HTTPProvider(''))\n",
-    "my_address = \"\"\n",
-    "private_key = \"\"\n",
+    "w3 = Web3(HTTPProvider(os.environ.get(\"PROVIDER_URI_SEPOLIA\")))\n",
+    "my_address = os.environ.get(\"ADDRESS\")\n",
+    "private_key = os.environ.get(\"PRIVATE_KEY\")\n",
     "address = Web3.to_checksum_address(my_address)\n",
     "print(\"address = \", address)\n",
     "print(\"balance = \", w3.from_wei(w3.eth.get_balance(address), 'ether'))\n",
@@ -54,12 +56,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "w3.eth.set_gas_price_strategy(medium_gas_price_strategy)\n",
     "tx = {\n",
     "    'nonce': w3.eth.get_transaction_count(address),\n",
     "    'to': address,\n",
     "    'value': w3.to_wei(0.001, 'ether'),\n",
-    "    'gas': 21000,\n",
-    "    'gasPrice': w3.to_wei('50', 'gwei')\n",
+    "    'gas': 2000000,\n",
+    "    'gasPrice': w3.eth.generate_gas_price()\n",
     "}\n",
     "signed_tx = w3.eth.account.sign_transaction(tx, private_key)\n",
     "tx_transaction = w3.eth.send_raw_transaction(signed_tx.rawTransaction)\n",
@@ -85,7 +88,8 @@
     "contract_address = \"0x98cec103AE046A31420508eaBe1494E71C3EE7a3\"\n",
     "contract_abi = json.loads('[{\"anonymous\":false,\"inputs\":[{\"indexed\":true,\"internalType\":\"address\",\"name\":\"src\",\"type\":\"address\"},{\"indexed\":true,\"internalType\":\"address\",\"name\":\"guy\",\"type\":\"address\"},{\"indexed\":false,\"internalType\":\"uint256\",\"name\":\"wad\",\"type\":\"uint256\"}],\"name\":\"Approval\",\"type\":\"event\"},{\"anonymous\":false,\"inputs\":[{\"indexed\":true,\"internalType\":\"address\",\"name\":\"dst\",\"type\":\"address\"},{\"indexed\":false,\"internalType\":\"uint256\",\"name\":\"wad\",\"type\":\"uint256\"}],\"name\":\"Deposit\",\"type\":\"event\"},{\"anonymous\":false,\"inputs\":[{\"indexed\":true,\"internalType\":\"address\",\"name\":\"src\",\"type\":\"address\"},{\"indexed\":true,\"internalType\":\"address\",\"name\":\"dst\",\"type\":\"address\"},{\"indexed\":false,\"internalType\":\"uint256\",\"name\":\"wad\",\"type\":\"uint256\"}],\"name\":\"Transfer\",\"type\":\"event\"},{\"anonymous\":false,\"inputs\":[{\"indexed\":true,\"internalType\":\"address\",\"name\":\"src\",\"type\":\"address\"},{\"indexed\":false,\"internalType\":\"uint256\",\"name\":\"wad\",\"type\":\"uint256\"}],\"name\":\"Withdrawal\",\"type\":\"event\"},{\"inputs\":[{\"internalType\":\"address\",\"name\":\"\",\"type\":\"address\"},{\"internalType\":\"address\",\"name\":\"\",\"type\":\"address\"}],\"name\":\"allowance\",\"outputs\":[{\"internalType\":\"uint256\",\"name\":\"\",\"type\":\"uint256\"}],\"stateMutability\":\"view\",\"type\":\"function\"},{\"inputs\":[{\"internalType\":\"address\",\"name\":\"guy\",\"type\":\"address\"},{\"internalType\":\"uint256\",\"name\":\"wad\",\"type\":\"uint256\"}],\"name\":\"approve\",\"outputs\":[{\"internalType\":\"bool\",\"name\":\"\",\"type\":\"bool\"}],\"stateMutability\":\"nonpayable\",\"type\":\"function\"},{\"inputs\":[{\"internalType\":\"address\",\"name\":\"\",\"type\":\"address\"}],\"name\":\"balanceOf\",\"outputs\":[{\"internalType\":\"uint256\",\"name\":\"\",\"type\":\"uint256\"}],\"stateMutability\":\"view\",\"type\":\"function\"},{\"inputs\":[],\"name\":\"decimals\",\"outputs\":[{\"internalType\":\"uint8\",\"name\":\"\",\"type\":\"uint8\"}],\"stateMutability\":\"view\",\"type\":\"function\"},{\"inputs\":[],\"name\":\"deposit\",\"outputs\":[],\"stateMutability\":\"payable\",\"type\":\"function\"},{\"inputs\":[],\"name\":\"name\",\"outputs\":[{\"internalType\":\"string\",\"name\":\"\",\"type\":\"string\"}],\"stateMutability\":\"view\",\"type\":\"function\"},{\"inputs\":[],\"name\":\"symbol\",\"outputs\":[{\"internalType\":\"string\",\"name\":\"\",\"type\":\"string\"}],\"stateMutability\":\"view\",\"type\":\"function\"},{\"inputs\":[],\"name\":\"totalSupply\",\"outputs\":[{\"internalType\":\"uint256\",\"name\":\"\",\"type\":\"uint256\"}],\"stateMutability\":\"view\",\"type\":\"function\"},{\"inputs\":[{\"internalType\":\"address\",\"name\":\"dst\",\"type\":\"address\"},{\"internalType\":\"uint256\",\"name\":\"wad\",\"type\":\"uint256\"}],\"name\":\"transfer\",\"outputs\":[{\"internalType\":\"bool\",\"name\":\"\",\"type\":\"bool\"}],\"stateMutability\":\"nonpayable\",\"type\":\"function\"},{\"inputs\":[{\"internalType\":\"address\",\"name\":\"src\",\"type\":\"address\"},{\"internalType\":\"address\",\"name\":\"dst\",\"type\":\"address\"},{\"internalType\":\"uint256\",\"name\":\"wad\",\"type\":\"uint256\"}],\"name\":\"transferFrom\",\"outputs\":[{\"internalType\":\"bool\",\"name\":\"\",\"type\":\"bool\"}],\"stateMutability\":\"nonpayable\",\"type\":\"function\"},{\"inputs\":[{\"internalType\":\"uint256\",\"name\":\"wad\",\"type\":\"uint256\"}],\"name\":\"withdraw\",\"outputs\":[],\"stateMutability\":\"nonpayable\",\"type\":\"function\"},{\"stateMutability\":\"payable\",\"type\":\"receive\"}]')\n",
     "contract = w3.eth.contract(address=contract_address, abi=contract_abi)\n",
-    "tx_hash = contract.functions.deposit().build_transaction({'from': address,\"nonce\": w3.eth.get_transaction_count(address),\"value\": w3.to_wei(0.01, 'ether')})\n",
+    "tx_hash = contract.functions.deposit().build_transaction({'from': address,\"nonce\": w3.eth.get_transaction_count(address),\"value\": w3.to_wei(0.01, 'ether'), \"gas\": 2000000, \"gasPrice\": w3.eth.generate_gas_price()})\n",
+    "w3.eth.set_gas_price_strategy(medium_gas_price_strategy)\n",
     "signed_tx = w3.eth.account.sign_transaction(tx_hash, private_key=private_key)\n",
     "tx_hash = w3.eth.send_raw_transaction(signed_tx.rawTransaction)\n",
     "receipt = w3.eth.wait_for_transaction_receipt(tx_hash)\n",
