--- a/src/utils/get_data.ipynb
+++ b/src/utils/get_data.ipynb
@@ -8,18 +8,21 @@
     "\n",
     "Library: [web3.py](https://web3py.readthedocs.io/en/stable/index.html)\n",
     "\n",
-    "Some other useful resources: [alchemy](https://docs.alchemy.com/)"
+    "Some other useful resources: [Etherscan(Sepolia)](https://docs.etherscan.io/v/sepolia-etherscan/), [Etherscan](https://docs.etherscan.io/), [alchemy](https://docs.alchemy.com/)\n",
+    "\n",
+    "If you want to implement some other functions, please refer to above documentations."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "from web3 import Web3, HTTPProvider\n",
     "import json\n",
     "import time\n",
+    "import requests\n",
     "import os"
    ]
   },
@@ -34,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,6 +87,97 @@
     "\n",
     "# get the current block number\n",
     "block_number = w3.eth.block_number"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get information from etherscan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48.93486310911901\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_account_balance(address):\n",
+    "    api_key = os.environ.get(\"ETHERSCAN_API_KEY\")\n",
+    "    url = f\"https://api-sepolia.etherscan.io/api?module=account&action=balance&address={address}&tag=latest&apikey={api_key}\"\n",
+    "    response = requests.get(url)\n",
+    "    data = response.json()\n",
+    "    if data['status'] == '1':\n",
+    "        balance = int(data['result']) / 10**18\n",
+    "        return balance\n",
+    "    else:\n",
+    "        return \"Error: \" + data['message']\n",
+    "\n",
+    "print(get_account_balance(my_address))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4977317\n",
+      "1703816328\n",
+      "0xa4fd9e936b0d743cd62c67f5f55fae1ea4f9dd1a0c88853f26f9f0a9be5bb97e\n",
+      "0xa7e4ef0a9e15bdef215e2ed87ae050f974ecd60b\n",
+      "0x3dad7c5704a6ea567a0549ee711768c0a405d06c\n",
+      "500000000000000000\n",
+      "63000\n",
+      "15249514035\n",
+      "42000\n",
+      "21000\n",
+      "1\n",
+      "0x\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_account_transactions(address):\n",
+    "    api_key = os.environ.get(\"ETHERSCAN_API_KEY\")\n",
+    "    url = f\"https://api-sepolia.etherscan.io/api?module=account&action=txlist&address={address}&startblock=0&endblock=99999999&page=1&offset=100&sort=asc&apikey={api_key}\"\n",
+    "    response = requests.get(url)\n",
+    "    data = response.json()\n",
+    "    if data['status'] == '1':\n",
+    "        txs = data['result']\n",
+    "        return txs\n",
+    "    else:\n",
+    "        return \"Error: \" + data['message']\n",
+    "\n",
+    "transactions = get_account_transactions(my_address)\n",
+    "tx = transactions[0]\n",
+    "# print the first transaction in the list\n",
+    "# this includes all the fields returned by the API\n",
+    "print(tx['blockNumber'])\n",
+    "print(tx['timeStamp'])\n",
+    "print(tx['hash'])\n",
+    "print(tx['from'])\n",
+    "print(tx['to'])\n",
+    "print(tx['value'])\n",
+    "print(tx['gas'])\n",
+    "print(tx['gasPrice'])\n",
+    "print(tx['cumulativeGasUsed'])\n",
+    "print(tx['gasUsed'])\n",
+    "print(tx['txreceipt_status'])\n",
+    "print(tx['input'])\n",
+    "print(tx['contractAddress'])"
    ]
   },
   {
