--- a/src/utils/run.ipynb
+++ b/src/utils/run.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# How to listen to events, and upload model's output on chain\n",
-    "\n",
-    "By calling contract!"
+    "# How to listen to events, and upload model's output on chain"
    ]
   },
   {
